k8s/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: ludivault
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ghcr.io/kowalskipiotr98/ludivault-api:latest
          ports:
            - containerPort: 5500
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: ludivault
spec:
  ports:
    - port: 5500
      targetPort: 5500
  selector:
    app: api
