k8s/front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: ludivault
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
        - name: front
          image: ghcr.io/kowalskipiotr98/ludivault-web:latest
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: ludivault
spec:
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: front
