k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  namespace: ludivault
  labels:
    app.kubernetes.io/component: controller
  name: nginx-ingress
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ludivault-ingress
  namespace: ludivault
spec:
  rules:
    - http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 5500
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front
                port:
                  number: 8080
